# TCMT-M-Server

./: CMakeLists.txt
data/: tcmt.db
include/: httplib.h  server.h
src/: api.cpp  api.h  device.cpp  device.h  main.cpp  server.cpp  storage.cpp  storage.h  ws.cpp  ws.h
